crates/solidity/testing/snapshots/bindings_output/using/global_and_local/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
    ╭─[lib.sol:1:1]
    │
  1 │ ╭─▶ type Amount is uint64;
    ┆ ┆   
 13 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[main.sol:6:5]
    │
  6 │ ╭─▶     function test() public pure {
    ┆ ┆   
 10 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (1):
- Def: #1 ["Test" @ main.sol:3:10] (contract)

------------------------------------------------------------------------

References (2):
- Ref: ["AmountLib" @ main.sol:4:11] -> unresolved
- Ref: ["Amount" @ main.sol:4:25] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 

------------------------------------------------------------------------

Bindings: 
   ╭─[main.sol:1:1]
   │
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 4 │     using AmountLib for Amount;
   │           ────┬────     ───┬──  
   │               ╰───────────────── unresolved
   │                            │    
   │                            ╰──── unresolved
───╯
